# mkl_cpp

./: CMakeLists.txt  app.cpp  build.sh  matrix.hpp  mkl.hpp  simd.hpp  simd_marco.hpp
test/: matrix_test.cpp  simd_support.cpp
